--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,10 +1,10 @@
-primary_name: "lynn"
-secondary_name: "Zongrong Li"
+primary_name: "Lynn Lin"
+secondary_name: "Lin Lin"
 navbar_name: "Homepage"
 
 positions:
 - logo: /assets/images/badges/Texas_A&M_University_seal.svg  # Logo is optional
-  name: Ph.D. in Geographic Information Systems
+  name: master in the Royal College of Arts
 # - name: Position 2 without logo
 
 
