--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -4,7 +4,7 @@ navbar_name: "Homepage"
 
 positions:
 - logo: /assets/images/badges/Texas_A&M_University_seal.svg  # Logo is optional
-  name: master in the Royal College of Arts
+  name: Product Designer | MA Design | Royal College of Art
 # - name: Position 2 without logo
 
 
