--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -3,7 +3,7 @@ secondary_name: "Lin Lin"
 navbar_name: "Homepage"
 
 positions:
-- logo: /assets/images/badges/Texas_A&M_University_seal.svg  # Logo is optional
+- logo: /assets/images/badges/rca.svg  # Logo is optional
   name: Product Designer | MA Design | Royal College of Art
 # - name: Position 2 without logo
 
