--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -8,7 +8,7 @@ positions:
 # - name: Position 2 without logo
 
 
-email: "177037@qq.com"
+email: "1770372808@qq.com"
 cv_link: /assets/CV/cv.pdf  #IDK
 gscholar: XbCCGC4AAAAJ  # This is an example, replace it with your own Google Scholar ID
 github: Lynnlin717
